[package]
name = "serde-json-assert"
version = "0.3.1"
edition = "2021"
authors = [
    "David Pedersen <david.pdrsn@gmail.com>",
    "Martin Hardselius <martin@hardselius.dev>",
]
license = "MIT OR Apache-2.0"
description = "Flexible JSON assertions"
homepage = "https://github.com/hardselius/serde-json-assert"
repository = "https://github.com/hardselius/serde-json-assert"
categories = ["development-tools"]
keywords = ["serde_json", "json", "testing"]
documentation = "https://docs.rs/serde-json-assert"
readme = "README.md"

[dependencies]
serde_json = "1"
serde = "1"
float-cmp = "0.10.0"

[dev-dependencies]
version-sync = "0.9"
serde = { version = "1", features = ["derive"] }

[badges]
maintenance = { status = "maintained" }
